tests/snapshots/hir_from_ast__hir_from_ast_transformation_for_button_management_condition_match.snap
---
source: tests/hir_from_ast.rs
expression: file
---
typedefs:
  - Enumeration:
      id: Button
      elements:
        - Released
        - Pressed
      location: ~
  - Enumeration:
      id: ResetState
      elements:
        - InProgress
        - Confirmed
      location: ~
functions: []
nodes:
  - id: counter
    is_component: false
    inputs:
      - - res
        - Boolean
      - - inc
        - Integer
    unscheduled_equations:
      o:
        scope: Output
        id: o
        signal_type: Integer
        expression:
          FunctionApplication:
            function_expression:
              Call:
                id: if_then_else
                typing:
                  Abstract:
                    - - Boolean
                      - Integer
                      - Integer
                    - Integer
                location: ~
            inputs:
              - SignalCall:
                  signal:
                    id: res
                    scope: Input
                  typing: Boolean
                  location: ~
                  dependencies: ~
              - Constant:
                  constant:
                    Integer: 0
                  typing: Integer
                  location: ~
                  dependencies: ~
              - FunctionApplication:
                  function_expression:
                    Call:
                      id: " + "
                      typing:
                        Abstract:
                          - - Integer
                            - Integer
                          - Integer
                      location: ~
                  inputs:
                    - FunctionApplication:
                        function_expression:
                          Call:
                            id: (_)
                            typing:
                              Abstract:
                                - - Integer
                                - Integer
                            location: ~
                        inputs:
                          - FollowedBy:
                              constant:
                                Integer: 0
                              expression:
                                SignalCall:
                                  signal:
                                    id: o
                                    scope: Output
                                  typing: Integer
                                  location: ~
                                  dependencies: ~
                              typing: Integer
                              location: ~
                              dependencies: ~
                        typing: Integer
                        location: ~
                        dependencies: ~
                    - SignalCall:
                        signal:
                          id: inc
                          scope: Input
                        typing: Integer
                        location: ~
                        dependencies: ~
                  typing: Integer
                  location: ~
                  dependencies: ~
            typing: Integer
            location: ~
            dependencies: ~
        location: ~
    unitary_nodes: {}
    contract:
      requires: []
      ensures: []
      invariant: []
      assert: []
    location: ~
    graph: ~
  - id: reset_button
    is_component: false
    inputs:
      - - button_state
        - Enumeration: Button
      - - period
        - Integer
      - - reset_limit_1
        - Integer
      - - reset_limit_2
        - Integer
    unscheduled_equations:
      counter:
        scope: Local
        id: counter
        signal_type: Integer
        expression:
          NodeApplication:
            node: counter
            inputs:
              - SignalCall:
                  signal:
                    id: res
                    scope: Local
                  typing: Boolean
                  location: ~
                  dependencies: ~
              - SignalCall:
                  signal:
                    id: period
                    scope: Input
                  typing: Integer
                  location: ~
                  dependencies: ~
            signal: o
            typing: Integer
            location: ~
            dependencies: ~
        location: ~
      res:
        scope: Local
        id: res
        signal_type: Boolean
        expression:
          FunctionApplication:
            function_expression:
              Call:
                id: " && "
                typing:
                  Abstract:
                    - - Boolean
                      - Boolean
                    - Boolean
                location: ~
            inputs:
              - FunctionApplication:
                  function_expression:
                    Call:
                      id: (_)
                      typing:
                        Abstract:
                          - - Boolean
                          - Boolean
                      location: ~
                  inputs:
                    - FunctionApplication:
                        function_expression:
                          Call:
                            id: " == "
                            typing:
                              Abstract:
                                - - Enumeration: Button
                                  - Enumeration: Button
                                - Boolean
                            location: ~
                        inputs:
                          - SignalCall:
                              signal:
                                id: button_state
                                scope: Input
                              typing:
                                Enumeration: Button
                              location: ~
                              dependencies: ~
                          - Constant:
                              constant:
                                Enumeration:
                                  - Button
                                  - Pressed
                              typing:
                                Enumeration: Button
                              location: ~
                              dependencies: ~
                        typing: Boolean
                        location: ~
                        dependencies: ~
                  typing: Boolean
                  location: ~
                  dependencies: ~
              - FunctionApplication:
                  function_expression:
                    Call:
                      id: (_)
                      typing:
                        Abstract:
                          - - Boolean
                          - Boolean
                      location: ~
                  inputs:
                    - FollowedBy:
                        constant:
                          Boolean: true
                        expression:
                          FunctionApplication:
                            function_expression:
                              Call:
                                id: " == "
                                typing:
                                  Abstract:
                                    - - Enumeration: Button
                                      - Enumeration: Button
                                    - Boolean
                                location: ~
                            inputs:
                              - SignalCall:
                                  signal:
                                    id: button_state
                                    scope: Input
                                  typing:
                                    Enumeration: Button
                                  location: ~
                                  dependencies: ~
                              - Constant:
                                  constant:
                                    Enumeration:
                                      - Button
                                      - Released
                                  typing:
                                    Enumeration: Button
                                  location: ~
                                  dependencies: ~
                            typing: Boolean
                            location: ~
                            dependencies: ~
                        typing: Boolean
                        location: ~
                        dependencies: ~
                  typing: Boolean
                  location: ~
                  dependencies: ~
            typing: Boolean
            location: ~
            dependencies: ~
        location: ~
      user_reset_request:
        scope: Output
        id: user_reset_request
        signal_type: Boolean
        expression:
          Match:
            expression:
              SignalCall:
                signal:
                  id: button_state
                  scope: Input
                typing:
                  Enumeration: Button
                location: ~
                dependencies: ~
            arms:
              - - Constant:
                    constant:
                      Enumeration:
                        - Button
                        - Released
                    location: ~
                - ~
                - []
                - FollowedBy:
                    constant:
                      Boolean: false
                    expression:
                      SignalCall:
                        signal:
                          id: user_reset_request
                          scope: Output
                        typing: Boolean
                        location: ~
                        dependencies: ~
                    typing: Boolean
                    location: ~
                    dependencies: ~
              - - Constant:
                    constant:
                      Enumeration:
                        - Button
                        - Pressed
                    location: ~
                - ~
                - []
                - FunctionApplication:
                    function_expression:
                      Call:
                        id: " >= "
                        typing:
                          Abstract:
                            - - Integer
                              - Integer
                            - Boolean
                        location: ~
                    inputs:
                      - SignalCall:
                          signal:
                            id: counter
                            scope: Local
                          typing: Integer
                          location: ~
                          dependencies: ~
                      - FunctionApplication:
                          function_expression:
                            Call:
                              id: " + "
                              typing:
                                Abstract:
                                  - - Integer
                                    - Integer
                                  - Integer
                              location: ~
                          inputs:
                            - SignalCall:
                                signal:
                                  id: reset_limit_1
                                  scope: Input
                                typing: Integer
                                location: ~
                                dependencies: ~
                            - SignalCall:
                                signal:
                                  id: reset_limit_2
                                  scope: Input
                                typing: Integer
                                location: ~
                                dependencies: ~
                          typing: Integer
                          location: ~
                          dependencies: ~
                    typing: Boolean
                    location: ~
                    dependencies: ~
            typing: Boolean
            location: ~
            dependencies: ~
        location: ~
      user_reset_request_state:
        scope: Output
        id: user_reset_request_state
        signal_type:
          Enumeration: ResetState
        expression:
          Match:
            expression:
              SignalCall:
                signal:
                  id: button_state
                  scope: Input
                typing:
                  Enumeration: Button
                location: ~
                dependencies: ~
            arms:
              - - Constant:
                    constant:
                      Enumeration:
                        - Button
                        - Released
                    location: ~
                - ~
                - []
                - Constant:
                    constant:
                      Enumeration:
                        - ResetState
                        - Confirmed
                    typing:
                      Enumeration: ResetState
                    location: ~
                    dependencies: ~
              - - Constant:
                    constant:
                      Enumeration:
                        - Button
                        - Pressed
                    location: ~
                - FunctionApplication:
                    function_expression:
                      Call:
                        id: " >= "
                        typing:
                          Abstract:
                            - - Integer
                              - Integer
                            - Boolean
                        location: ~
                    inputs:
                      - SignalCall:
                          signal:
                            id: counter
                            scope: Local
                          typing: Integer
                          location: ~
                          dependencies: ~
                      - SignalCall:
                          signal:
                            id: reset_limit_1
                            scope: Input
                          typing: Integer
                          location: ~
                          dependencies: ~
                    typing: Boolean
                    location: ~
                    dependencies: ~
                - []
                - Constant:
                    constant:
                      Enumeration:
                        - ResetState
                        - InProgress
                    typing:
                      Enumeration: ResetState
                    location: ~
                    dependencies: ~
              - - Default:
                    location: ~
                - ~
                - []
                - Constant:
                    constant:
                      Enumeration:
                        - ResetState
                        - Confirmed
                    typing:
                      Enumeration: ResetState
                    location: ~
                    dependencies: ~
            typing:
              Enumeration: ResetState
            location: ~
            dependencies: ~
        location: ~
    unitary_nodes: {}
    contract:
      requires: []
      ensures: []
      invariant: []
      assert: []
    location: ~
    graph: ~
component: ~
location: ~

